# prettify2

./: .gitignore  LICENSE  README.md  pyproject.toml  tmpdump.txt  todo
src/prettify_cli/: presets.py
src/simplicitas/: presets.py  simplicitas.py  tests.py
