[build-systems]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prettify_cli"
version = "0.0.1"
authors = [
  { name="Just5MoreMinutes", email="just5moreminutez@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"